Handling errors with irregular address

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 made-mindful-hospital-stats-ab829ba63271.json
+hospital-stats-firebase-adminsdk-3i68k-23a06284a6.json
 data.json
 node_modules/
 .env
